--- a/SpringBootCRUDRestfulWebservices/src/main/resources/application.properties
+++ b/SpringBootCRUDRestfulWebservices/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=SpringBootCRUDRestfulWebservices
-spring.datasource.url=jdbc:mysql://localhost:3306/usersDB?useSSL=false
+spring.datasource.url=jdbc:mysql://javaguides.cbc6oya6kprp.eu-north-1.rds.amazonaws.com:3306/usersDB?useSSL=false
 spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.password=Sandalika24
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=5000
